[package]
name = "wasmer-cli-near"
version = "1.0.1"
description = "Wasmer CLI"
categories = ["wasm", "command-line-interface"]
keywords = ["wasm", "webassembly", "cli"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
readme = "README.md"
edition = "2018"
default-run = "wasmer"

[[bin]]
name = "wasmer"
path = "src/bin/wasmer.rs"
doc = false

[[bin]]
name = "wasmer-headless"
path = "src/bin/wasmer_headless.rs"
doc = false
required-features = ["headless"]

[dependencies]
wasmer = { version = "1.0.1", path = "../api", default-features = false, package = "wasmer-near" }
wasmer-compiler = { version = "1.0.1", path = "../compiler", package = "wasmer-compiler-near" }
wasmer-compiler-cranelift = { version = "1.0.1", path = "../compiler-cranelift", optional = true, package = "wasmer-compiler-cranelift-near" }
wasmer-compiler-singlepass = { version = "1.0.1", path = "../compiler-singlepass", optional = true, package = "wasmer-compiler-singlepass-near" }
wasmer-compiler-llvm = { version = "1.0.1", path = "../compiler-llvm", optional = true, package = "wasmer-compiler-llvm-near" }
wasmer-emscripten = { version = "1.0.1", path = "../emscripten", optional = true, package = "wasmer-emscripten-near" }
wasmer-engine = { version = "1.0.1", path = "../engine", package = "wasmer-engine-near" }
wasmer-engine-jit = { version = "1.0.1", path = "../engine-jit", optional = true, package = "wasmer-engine-jit-near" }
wasmer-engine-native = { version = "1.0.1", path = "../engine-native", optional = true, package = "wasmer-engine-native-near" }
wasmer-engine-object-file = { version = "1.0.1", path = "../engine-object-file", optional = true, package = "wasmer-engine-object-file-near" }
wasmer-vm = { version = "1.0.1", path = "../vm", package = "wasmer-vm-near" }
wasmer-wasi = { version = "1.0.1", path = "../wasi", default-features = false, optional = true, package = "wasmer-wasi-near" }
wasmer-wasi-experimental-io-devices = { version = "1.0.1", path = "../wasi-experimental-io-devices", optional = true, package = "wasmer-wasi-experimental-io-devices-near" }
wasmer-wast = { version = "1.0.1", path = "../../tests/lib/wast", optional = true, package = "wasmer-wast-near" }
wasmer-cache = { version = "1.0.1", path = "../cache", optional = true, package = "wasmer-cache-near" }
wasmer-types = { version = "1.0.1", path = "../wasmer-types", package = "wasmer-types-near" }
atty = "0.2"
colored = "2.0"
anyhow = "1.0"
structopt = { version = "0.3", features = ["suggestions"] }
# For the function names autosuggestion
distance = "0.4"
# For the inspect subcommand
bytesize = "1.0"
cfg-if = "1.0"
# For debug feature
fern = { version = "0.6", features = ["colored"], optional = true }
log = { version = "0.4", optional = true }
tempfile = "3"

[features]
# Don't add the compiler features in default, please add them on the Makefile
# since we might want to autoconfigure them depending on the availability on the host.
default = [
    "wat",
    "wast",
    "jit",
    "native",
    "object-file",
    "cache",
    "wasi",
    "emscripten",
]
engine = []
jit = [
    "wasmer-engine-jit",
    "engine",
]
native = [
    "wasmer-engine-native",
    "engine",
]
object-file = [
    "wasmer-engine-object-file",
    "engine",
]
cache = ["wasmer-cache"]
wast = ["wasmer-wast"]
wasi = ["wasmer-wasi"]
emscripten = ["wasmer-emscripten"]
wat = ["wasmer/wat"]
compiler = [
    "wasmer-compiler/translator",
    "wasmer-engine-jit/compiler",
    "wasmer-engine-native/compiler",
    "wasmer-engine-object-file/compiler",
]
experimental-io-devices = [
    "wasmer-wasi-experimental-io-devices",
    "wasi"
]
singlepass = [
    "wasmer-compiler-singlepass",
    "compiler",
]
cranelift = [
    "wasmer-compiler-cranelift",
    "compiler",
]
# Enable Cranelift experimental x64 backend
cranelift-experimental-x64 = [
    "cranelift",
    "wasmer-compiler-cranelift/experimental-x64",
]
llvm = [
    "wasmer-compiler-llvm",
    "compiler",
]
debug = ["fern", "log", "wasmer-wasi/logging"]
disable-all-logging = ["wasmer-wasi/disable-all-logging"]
headless = []
headless-minimal = ["headless", "disable-all-logging", "wasi", "native", "jit"]
