[package]
name = "wasmer-middlewares-near"
version = "1.0.1"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
description = "A collection of various useful middlewares"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/wasmerio/wasmer"
readme = "README.md"
edition = "2018"

[dependencies]
wasmer = { path = "../api", version = "1.0.1", package = "wasmer-near" }
wasmer-types = { path = "../wasmer-types", version = "1.0.1", package = "wasmer-types-near" }
wasmer-vm = { path = "../vm", version = "1.0.1", package = "wasmer-vm-near" }

[badges]
maintenance = { status = "actively-developed" }
